--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -3,15 +3,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/added_bp_devices"
-            android:icon="@drawable/bp_icon"
+            android:icon="@drawable/arrow_folded"
             android:title="@string/bp_devices" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/scale_icon_better"
+            android:icon="@drawable/arrow_folded"
             android:title="@string/scales" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/glucometer_icon"
+            android:icon="@drawable/arrow_folded"
             android:title="@string/glucometers" />
     </group>
 </menu>
